--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -21,6 +21,9 @@ extra-source-files: CHANGELOG.md
 
 library
     exposed-modules:  Regex.Rure.FFI
+                    , Regex.Rure
+
+    extra-libraries: rure
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -28,13 +31,48 @@ library
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.3.0.0 && <5
-    build-tool-depends: c2hs:c2hs
+                    , bytestring
+    build-tool-depends: c2hs:c2hs >= 0.26.1
     hs-source-dirs:   src
+    ghc-options:      -Wall
     default-language: Haskell2010
+
+    if impl(ghc >=8.0)
+        ghc-options:
+            -Wincomplete-uni-patterns -Wincomplete-record-updates
+            -Wredundant-constraints -Widentities
+
+    if impl(ghc >=8.4)
+        ghc-options: -Wmissing-export-lists
+
+    if impl(ghc >=8.2)
+        ghc-options: -Wcpp-undef
+
+    if impl(ghc >=8.10)
+        ghc-options: -Wunused-packages
 
 test-suite regex-rure-test
     default-language: Haskell2010
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Spec.hs
-    build-depends:    base 
+    ghc-options:      -Wall
+    build-depends:    base
+                    , tasty
+                    , tasty-hunit
+                    , regex-rure
+                    , bytestring
+
+    if impl(ghc >=8.0)
+        ghc-options:
+            -Wincomplete-uni-patterns -Wincomplete-record-updates
+            -Wredundant-constraints -Widentities
+
+    if impl(ghc >=8.4)
+        ghc-options: -Wmissing-export-lists
+
+    if impl(ghc >=8.2)
+        ghc-options: -Wcpp-undef
+
+    if impl(ghc >=8.10)
+        ghc-options: -Wunused-packages
