--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -15,6 +15,10 @@ build-type: Simple
 category: Text, Regex
 extra-source-files: CHANGELOG.md
 
+source-repository head
+    type:     git
+    location: https://github.com/vmchale/rure
+
 library
     exposed-modules: Regex.Rure
                      Regex.Rure.FFI
