--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -1,18 +1,16 @@
-cabal-version:   1.18
+cabal-version:      1.18
 name:               regex-rure
 version:            0.1.0.0
-synopsis: Bindings to Rust's regex library
-description: Bindings to Rust's regex library, including a higher-level API.
-
--- A URL where users can report bugs.
--- bug-reports:
-
-license: GPL-3
-license-file: LICENSE
-author:             Vanessa McHale
+license:            GPL-3
+license-file:       LICENSE
 maintainer:         vamchale@gmail.com
-build-type: Simple
-category: Text, Regex
+author:             Vanessa McHale
+synopsis:           Bindings to Rust's regex library
+description:
+    Bindings to Rust's regex library, including a higher-level API.
+
+category:           Text, Regex
+build-type:         Simple
 extra-source-files: CHANGELOG.md
 
 source-repository head
@@ -20,17 +18,19 @@ source-repository head
     location: https://github.com/vmchale/rure
 
 library
-    exposed-modules: Regex.Rure
-                     Regex.Rure.FFI
+    exposed-modules:
+        Regex.Rure
+        Regex.Rure.FFI
 
-    extra-libraries: rure
-    other-extensions: FlexibleContexts
-    build-depends:    base >=4.3.0.0 && <5
-                    , bytestring
-    build-tool-depends: c2hs:c2hs >= 0.26.1
-    hs-source-dirs:   src
-    ghc-options:      -Wall
-    default-language: Haskell2010
+    build-tool-depends: c2hs:c2hs >=0.26.1
+    hs-source-dirs:     src
+    default-language:   Haskell2010
+    other-extensions:   FlexibleContexts
+    extra-libraries:    rure
+    ghc-options:        -Wall
+    build-depends:
+        base >=4.3.0.0 && <5,
+        bytestring
 
     if impl(ghc >=8.0)
         ghc-options:
@@ -47,17 +47,18 @@ library
         ghc-options: -Wunused-packages
 
 test-suite regex-rure-test
-    default-language: Haskell2010
     type:             exitcode-stdio-1.0
-    hs-source-dirs:   test
     main-is:          Spec.hs
-    ghc-options:      -Wall
+    hs-source-dirs:   test
+    default-language: Haskell2010
     other-extensions: OverloadedStrings
-    build-depends:    base
-                    , tasty
-                    , tasty-hunit
-                    , regex-rure
-                    , bytestring
+    ghc-options:      -Wall
+    build-depends:
+        base,
+        tasty,
+        tasty-hunit,
+        regex-rure,
+        bytestring
 
     if impl(ghc >=8.0)
         ghc-options:
