--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -29,7 +29,7 @@ library
     ghc-options:        -Wall
     build-depends:
         base >=4.3.0.0 && <5,
-        bytestring
+        bytestring >= 0.11.0.0
 
     if impl(ghc >=8.0)
         ghc-options:
