--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -12,6 +12,7 @@ description:
 category:           Text, Regex
 build-type:         Simple
 extra-source-files: CHANGELOG.md
+                    README.md
 
 source-repository head
     type:     git
