--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -1,6 +1,6 @@
 cabal-version:      1.18
 name:               regex-rure
-version:            0.1.0.0
+version:            0.1.0.1
 license:            GPL-3
 license-file:       LICENSE
 maintainer:         vamchale@gmail.com
@@ -11,8 +11,10 @@ description:
 
 category:           Text, Regex
 build-type:         Simple
-extra-source-files: CHANGELOG.md
-                    README.md
+extra-source-files:
+    CHANGELOG.md
+    README.md
+    cbits/rure.h
 
 source-repository head
     type:     git
@@ -27,6 +29,8 @@ library
     hs-source-dirs:     src
     default-language:   Haskell2010
     extra-libraries:    rure
+    include-dirs:       cbits
+    install-includes:   cbits/rure.h
     ghc-options:        -Wall
     build-depends:
         base >=4.10.0.0 && <5,
