--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -1,7 +1,7 @@
 cabal-version:      1.18
 name:               regex-rure
 version:            0.1.0.1
-license:            GPL-3
+license:            AGPL-3
 license-file:       LICENSE
 maintainer:         vamchale@gmail.com
 author:             Vanessa McHale
