--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -20,21 +20,28 @@ source-repository head
     type:     git
     location: https://github.com/vmchale/rure
 
+flag cross
+    description: Enable to ease cross-compiling
+    default:     False
+    manual:      True
+
 library
     exposed-modules:
         Regex.Rure
         Regex.Rure.FFI
 
-    build-tool-depends: c2hs:c2hs >=0.26.1
-    hs-source-dirs:     src
-    default-language:   Haskell2010
-    extra-libraries:    rure
-    include-dirs:       cbits
-    install-includes:   cbits/rure.h
-    ghc-options:        -Wall
+    hs-source-dirs:   src
+    default-language: Haskell2010
+    extra-libraries:  rure
+    include-dirs:     cbits
+    install-includes: cbits/rure.h
+    ghc-options:      -Wall
     build-depends:
         base >=4.10.0.0 && <5,
         bytestring >=0.11.0.0
+
+    if !flag(cross)
+        build-tool-depends: c2hs:c2hs >=0.26.1
 
     if impl(ghc >=8.0)
         ghc-options:
