--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -38,7 +38,8 @@ library
     ghc-options:      -Wall
     build-depends:
         base >=4.10.0.0 && <5,
-        bytestring >=0.11.0.0
+        bytestring >=0.11.0.0,
+        deepseq
 
     if !flag(cross)
         build-tool-depends: c2hs:c2hs >=0.26.1
@@ -70,6 +71,33 @@ test-suite regex-rure-test
         tasty-hunit,
         regex-rure,
         bytestring
+
+    if impl(ghc >=8.0)
+        ghc-options:
+            -Wincomplete-uni-patterns -Wincomplete-record-updates
+            -Wredundant-constraints -Widentities
+
+    if impl(ghc >=8.4)
+        ghc-options: -Wmissing-export-lists
+
+    if impl(ghc >=8.2)
+        ghc-options: -Wcpp-undef
+
+    if impl(ghc >=8.10)
+        ghc-options: -Wunused-packages
+
+benchmark regex-rure-bench
+    type:             exitcode-stdio-1.0
+    main-is:          Bench.hs
+    hs-source-dirs:   bench
+    default-language: Haskell2010
+    ghc-options:      -Wall
+    build-depends:
+        base,
+        bytestring,
+        criterion,
+        regex-rure,
+        regex-tdfa
 
     if impl(ghc >=8.0)
         ghc-options:
