--- a/regex-rure.cabal
+++ b/regex-rure.cabal
@@ -12,9 +12,10 @@ description:
 category:           Text, Regex
 build-type:         Simple
 extra-source-files:
-    CHANGELOG.md
     README.md
     cbits/rure.h
+
+extra-doc-files:    CHANGELOG.md
 
 source-repository head
     type:     git
